fixed spacing issue in actor page

--- a/style.css
+++ b/style.css
@@ -318,6 +318,17 @@ p {
   color: var(--orange);
 }
 
+#sub-description {
+  font-size: 1.5rem;
+  color: var(--medium-blue);
+  text-align: center;
+  margin-bottom: var(--spacing-xl);
+}
+
+#acting .section-title{
+    margin-bottom: 2vh;
+}
+
 /* About Section */
 .about-header {
   text-align: center;
